# suenot-machine-learning-for-trading

./: .gitignore  CLAUDE.md  README.md
06_machine_learning_process/rust_ml_crypto/: .gitignore  Cargo.toml  README.md
06_machine_learning_process/rust_ml_crypto/examples/: bias_variance.rs  cross_validation.rs  fetch_data.rs  knn_workflow.rs  mutual_information.rs
06_machine_learning_process/rust_ml_crypto/src/: lib.rs  main.rs
07_linear_models/rust_examples/: Cargo.toml  README.md  README.ru.md
07_linear_models/rust_examples/examples/: fetch_data.rs  full_pipeline.rs  linear_regression.rs  logistic_regression.rs  ridge_lasso.rs
07_linear_models/rust_examples/src/: lib.rs
08_ml4t_workflow/rust_backtester/: Cargo.toml  README.md
08_ml4t_workflow/rust_backtester/examples/: fetch_data.rs  ml_signals.rs  simple_backtest.rs  sma_crossover.rs
08_ml4t_workflow/rust_backtester/src/: lib.rs
09_time_series_models/rust_examples/: Cargo.toml  README.md
09_time_series_models/rust_examples/src/: lib.rs
10_bayesian_machine_learning/rust_examples/: Cargo.toml  README.md  README.ru.md
10_bayesian_machine_learning/rust_examples/src/: lib.rs
11_decision_trees_random_forests/rust_examples/: Cargo.toml  README.md
11_decision_trees_random_forests/rust_examples/src/: lib.rs
12_gradient_boosting_machines/rust_gbm/: Cargo.toml  README.md
12_gradient_boosting_machines/rust_gbm/examples/: backtest.rs  fetch_data.rs  train_model.rs
12_gradient_boosting_machines/rust_gbm/src/: lib.rs  main.rs
14_working_with_text_data/rust_nlp_crypto/: Cargo.toml  README.md
14_working_with_text_data/rust_nlp_crypto/examples/: fetch_announcements.rs  sentiment_analysis.rs  trading_signals.rs
14_working_with_text_data/rust_nlp_crypto/src/: lib.rs  main.rs
15_topic_modeling/rust_examples/: Cargo.toml  README.md  README.ru.md
15_topic_modeling/rust_examples/src/: lib.rs
16_word_embeddings/rust_crypto_embeddings/: .gitignore  Cargo.toml  README.md  README.ru.md
16_word_embeddings/rust_crypto_embeddings/data/: sample_corpus.txt
16_word_embeddings/rust_crypto_embeddings/examples/: analyze_sentiment.rs  fetch_trades.rs  train_embeddings.rs
16_word_embeddings/rust_crypto_embeddings/src/: lib.rs  main.rs
17_deep_learning/rust_nn_crypto/: Cargo.toml  README.md
17_deep_learning/rust_nn_crypto/src/: lib.rs
18_convolutional_neural_nets/rust_cnn_crypto/: Cargo.toml  README.md
18_convolutional_neural_nets/rust_cnn_crypto/src/: lib.rs
19_recurrent_neural_nets/rust/: Cargo.toml  README.md
19_recurrent_neural_nets/rust/examples/: fetch_data.rs  full_pipeline.rs  predict.rs  train_lstm.rs
19_recurrent_neural_nets/rust/src/: lib.rs
20_autoencoders_for_conditional_risk_factors/rust_autoencoders/: Cargo.toml  README.md
20_autoencoders_for_conditional_risk_factors/rust_autoencoders/examples/: analyze_factors.rs  fetch_data.rs  train_model.rs
20_autoencoders_for_conditional_risk_factors/rust_autoencoders/src/: autoencoder.rs  bybit_client.rs  data_processor.rs  lib.rs  risk_factors.rs  utils.rs
21_gans_for_synthetic_time_series/rust_dcgan_bybit/: Cargo.toml  README.md  config.example.json
21_gans_for_synthetic_time_series/rust_dcgan_bybit/src/: lib.rs  main.rs
22_deep_reinforcement_learning/rust_rl_trading/: Cargo.toml  README.md
22_deep_reinforcement_learning/rust_rl_trading/src/: lib.rs
23_next_steps/rust_examples/: Cargo.toml  README.md
23_next_steps/rust_examples/examples/: backtest_example.rs  fetch_klines.rs  live_ticker.rs  rsi_strategy.rs  simple_sma_strategy.rs
23_next_steps/rust_examples/src/: lib.rs
24_alpha_factor_library/rust/: Cargo.toml  README.md
24_alpha_factor_library/rust/examples/: calculate_factors.rs  fetch_klines.rs  momentum_strategy.rs
24_alpha_factor_library/rust/src/: lib.rs
25_diffusion_models_for_trading/rust_diffusion_crypto/: Cargo.toml  README.md
25_diffusion_models_for_trading/rust_diffusion_crypto/examples/: fetch_data.rs  (+2 more)
27_graph_neural_networks/rust_gnn_crypto/: Cargo.toml  README.md
29_earnings_surprise_prediction/rust_earnings_crypto/: .gitignore  Cargo.toml  README.md
30_order_flow_imbalance/rust_examples/: Cargo.toml  README.md
31_optimal_execution_rl/rust_optimal_execution/: Cargo.toml  README.md
32_cross_asset_momentum/rust_momentum_crypto/: Cargo.toml  README.md
334_glow_trading/rust/: Cargo.toml  README.md
348_graph_generation_trading/: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
348_graph_generation_trading/examples/: basic_graph.rs  correlation_network.rs  trading_strategy.rs
348_graph_generation_trading/src/: lib.rs
348_graph_generation_trading/tests/: integration_tests.rs
360_squeeze_excitation_trading/: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
360_squeeze_excitation_trading/data/: sample_btcusdt.csv
360_squeeze_excitation_trading/examples/: backtest.rs  basic_se.rs  bybit_live.rs
360_squeeze_excitation_trading/src/: lib.rs
78_llm_trade_execution/: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
78_llm_trade_execution/examples/: basic_execution.rs  bybit_execution.rs  llm_adaptive.rs
78_llm_trade_execution/python/: __init__.py  data.py  execution.py  impact.py  llm.py  requirements.txt  strategy.py
78_llm_trade_execution/src/: lib.rs
79_llm_backtesting_assistant/: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
79_llm_backtesting_assistant/examples/: backtesting_assistant.py  basic_analysis.rs  crypto_backtest.rs  stock_backtest.rs
79_llm_backtesting_assistant/src/: error.rs  lib.rs
83_prototypical_networks_finance/: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
83_prototypical_networks_finance/examples/: backtest.rs  basic_prototypical.rs  regime_trading.rs
83_prototypical_networks_finance/python/: prototypical_network.py
83_prototypical_networks_finance/src/: lib.rs
83_prototypical_networks_finance/tests/: integration.rs
(+2116 files in other folders)
