[package]
name = "llm_trade_execution"
version = "0.1.0"
edition = "2021"
authors = ["Machine Learning for Trading Contributors"]
description = "LLM-based trade execution optimization for minimizing market impact"
license = "MIT"
repository = "https://github.com/suenot/machine-learning-for-trading"
keywords = ["trading", "execution", "llm", "market-impact", "algorithmic-trading"]
categories = ["finance", "algorithms"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket for real-time data
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Numeric operations
ndarray = "0.15"
statrs = "0.16"

# Configuration
config = "0.14"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Ring buffer for market data
circular-buffer = "0.1"

# HMAC for exchange authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
approx = "0.5"

[[example]]
name = "basic_execution"
path = "examples/basic_execution.rs"

[[example]]
name = "bybit_execution"
path = "examples/bybit_execution.rs"

[[example]]
name = "llm_adaptive"
path = "examples/llm_adaptive.rs"

[[bench]]
name = "execution_bench"
harness = false
path = "benches/execution_bench.rs"
