[package]
name = "prototypical_networks_finance"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Team"]
description = "Prototypical Networks for Few-Shot Market Regime Classification"
license = "MIT"
repository = "https://github.com/suenot/machine-learning-for-trading"
keywords = ["prototypical-networks", "meta-learning", "trading", "cryptocurrency", "few-shot"]
categories = ["science", "finance"]

[lib]
name = "prototypical_networks_finance"
path = "src/lib.rs"

[[example]]
name = "basic_prototypical"
path = "examples/basic_prototypical.rs"

[[example]]
name = "regime_trading"
path = "examples/regime_trading.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math and linear algebra
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"

# Statistics
statrs = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# WebSocket for real-time data
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# URL parsing
url = "2.5"

# Hash maps with better performance
hashbrown = "0.14"

# Ordered floats for comparisons
ordered-float = "4.2"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = []
cuda = []  # Future CUDA support
simd = []  # Future SIMD optimizations

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
