[package]
name = "ml_crypto"
version = "0.1.0"
edition = "2021"
description = "Machine Learning examples for cryptocurrency trading using Bybit data"
authors = ["ML Trading Examples"]

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Statistical functions
statrs = "0.16"

# CSV handling
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HMAC for API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "ml_crypto"
path = "src/main.rs"

[[example]]
name = "knn_workflow"
path = "examples/knn_workflow.rs"

[[example]]
name = "mutual_information"
path = "examples/mutual_information.rs"

[[example]]
name = "bias_variance"
path = "examples/bias_variance.rs"

[[example]]
name = "cross_validation"
path = "examples/cross_validation.rs"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"
