[package]
name = "crypto_ml"
version = "0.1.0"
edition = "2021"
description = "Decision Trees and Random Forests for crypto trading with Bybit data"
authors = ["ML4Trading"]

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data handling
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Statistics
statrs = "0.16"

# Parallel processing
rayon = "1.8"

# CSV handling
csv = "1.3"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "train_decision_tree"
path = "src/bin/train_decision_tree.rs"

[[bin]]
name = "train_random_forest"
path = "src/bin/train_random_forest.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[lib]
name = "crypto_ml"
path = "src/lib.rs"
