[package]
name = "rust_nlp_crypto"
version = "0.1.0"
edition = "2021"
authors = ["ML for Trading"]
description = "NLP and sentiment analysis for cryptocurrency trading with Bybit data"
readme = "README.md"

[dependencies]
# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Text processing / NLP
unicode-segmentation = "1.10"
regex = "1.10"
rust-stemmers = "1.2"
stop-words = "0.8"

# Math and statistics
ndarray = "0.15"
statrs = "0.16"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV for data export
csv = "1.3"

# Crypto for API authentication
ring = "0.17"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "nlp_crypto"
path = "src/main.rs"

[[example]]
name = "fetch_announcements"
path = "examples/fetch_announcements.rs"

[[example]]
name = "sentiment_analysis"
path = "examples/sentiment_analysis.rs"

[[example]]
name = "trading_signals"
path = "examples/trading_signals.rs"
