[package]
name = "topic_modeling_crypto"
version = "0.1.0"
edition = "2021"
authors = ["Topic Modeling Project"]
description = "Topic modeling for cryptocurrency market analysis using Bybit data"
readme = "README.md"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Linear algebra for LSI/SVD
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

# Random number generation for LDA
rand = "0.8"
rand_distr = "0.4"

# Text processing
regex = "1.10"
unicode-segmentation = "1.10"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress bars
indicatif = "0.17"

# Data serialization for saving models
bincode = "1.3"

# HashMap with better performance
hashbrown = "0.14"

# Parallel processing
rayon = "1.8"

# HMAC for Bybit API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "lsi_example"
path = "src/bin/lsi_example.rs"

[[bin]]
name = "lda_example"
path = "src/bin/lda_example.rs"

[[bin]]
name = "analyze_market"
path = "src/bin/analyze_market.rs"

[lib]
name = "topic_modeling"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
