[package]
name = "crypto_embeddings"
version = "0.1.0"
edition = "2021"
description = "Word embeddings for cryptocurrency trading analysis using Bybit data"
authors = ["Machine Learning for Trading"]
license = "MIT"

[dependencies]
# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"

# Text processing
unicode-segmentation = "1.10"
regex = "1.10"

# Data structures
hashbrown = "0.14"
indexmap = { version = "2.0", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# File I/O
csv = "1.3"

# HMAC for API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "crypto_embeddings"
path = "src/main.rs"

[[example]]
name = "fetch_trades"
path = "examples/fetch_trades.rs"

[[example]]
name = "train_embeddings"
path = "examples/train_embeddings.rs"

[[example]]
name = "analyze_sentiment"
path = "examples/analyze_sentiment.rs"
