[package]
name = "rust_nn_crypto"
version = "0.1.0"
edition = "2021"
authors = ["ML for Trading"]
description = "Feedforward Neural Network for cryptocurrency trading with Bybit data"
license = "MIT"

[dependencies]
# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Linear algebra for neural networks
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress bar for training
indicatif = "0.17"

# CSV for data export
csv = "1.3"

# HMAC for Bybit API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[features]
default = []
