[package]
name = "crypto-rnn"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Examples"]
description = "RNN для прогнозирования криптовалют с данными Bybit"
readme = "README.md"
license = "MIT"

[dependencies]
# HTTP клиент для API запросов
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Сериализация/десериализация JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Работа с временем
chrono = { version = "0.4", features = ["serde"] }

# Асинхронный рантайм
tokio = { version = "1.0", features = ["full"] }

# Математические операции и линейная алгебра
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Генератор случайных чисел
rand = "0.8"
rand_distr = "0.4"

# Обработка ошибок
anyhow = "1.0"
thiserror = "1.0"

# Логирование
log = "0.4"
env_logger = "0.10"

# CSV для сохранения/загрузки данных
csv = "1.3"

# Прогресс-бар для обучения
indicatif = "0.17"

# Сериализация моделей
bincode = "1.3"

[dev-dependencies]
# Тестирование
tokio-test = "0.4"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train_lstm"
path = "examples/train_lstm.rs"

[[example]]
name = "predict"
path = "examples/predict.rs"

[[example]]
name = "full_pipeline"
path = "examples/full_pipeline.rs"
