[package]
name = "crypto_autoencoders"
version = "0.1.0"
edition = "2021"
authors = ["ML4Trading"]
description = "Autoencoders for cryptocurrency risk factors analysis using Bybit data"
license = "MIT"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numeric computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Linear algebra
nalgebra = "0.32"

# Statistics
statrs = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CSV for data export
csv = "1.3"

# Progress bars
indicatif = "0.17"

# Command line arguments
clap = { version = "4.4", features = ["derive"] }

# HMAC for API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train_model"
path = "examples/train_model.rs"

[[example]]
name = "analyze_factors"
path = "examples/analyze_factors.rs"
