[package]
name = "rust_dcgan_bybit"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Examples"]
description = "DCGAN for synthetic cryptocurrency time series generation using Bybit data"
license = "MIT"

[dependencies]
# Deep Learning
tch = "0.17"  # PyTorch bindings for Rust (libtorch)
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"

# Async runtime & HTTP
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI & Logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
rand = "0.8"
csv = "1.3"
indicatif = "0.17"  # Progress bars

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[[bin]]
name = "dcgan_bybit"
path = "src/main.rs"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "train_model"
path = "src/bin/train_model.rs"

[[bin]]
name = "generate_samples"
path = "src/bin/generate_samples.rs"
