[package]
name = "rust_rl_trading"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Deep Reinforcement Learning for Cryptocurrency Trading on Bybit"
license = "MIT"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Linear algebra and matrix operations
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# HMAC for API signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# URL encoding
urlencoding = "2.1"

# Async traits
async-trait = "0.1"

# Circular buffer for experience replay
circular-buffer = "0.1"

# Progress bars
indicatif = "0.17"

# CSV for data export
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "train_agent"
path = "src/bin/train_agent.rs"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"
