[package]
name = "alpha_factors"
version = "0.1.0"
edition = "2021"
authors = ["ML4Trading"]
description = "Alpha factor library for cryptocurrency trading with Bybit"
license = "MIT"
readme = "README.md"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Statistics and math
statrs = "0.16"

# Environment variables
dotenv = "0.15"

# HMAC for API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[example]]
name = "fetch_klines"
path = "examples/fetch_klines.rs"

[[example]]
name = "calculate_factors"
path = "examples/calculate_factors.rs"

[[example]]
name = "momentum_strategy"
path = "examples/momentum_strategy.rs"
