[package]
name = "diffusion-crypto"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Examples"]
description = "Diffusion models for cryptocurrency forecasting using Rust"
readme = "README.md"
license = "MIT"
keywords = ["diffusion", "ddpm", "cryptocurrency", "forecasting", "machine-learning"]

[dependencies]
# Deep Learning (PyTorch bindings)
tch = "0.17"

# Math and arrays
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# HTTP client for API requests
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# CSV handling
csv = "1.3"

# Progress bars
indicatif = "0.17"

# Model serialization
bincode = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train_ddpm"
path = "examples/train_ddpm.rs"

[[example]]
name = "forecast"
path = "examples/forecast.rs"
