[package]
name = "earnings_crypto"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Team"]
description = "Crypto event surprise prediction using Bybit data"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Numerical computing
ndarray = "0.15"
ndarray-stats = "0.5"
statrs = "0.16"

# Statistics
ordered-float = "4.2"

# CLI arguments
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV handling
csv = "1.3"

# Async utilities
futures = "0.3"

[[bin]]
name = "earnings_crypto"
path = "src/main.rs"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "event_analysis"
path = "examples/event_analysis.rs"

[[example]]
name = "surprise_prediction"
path = "examples/surprise_prediction.rs"

[[example]]
name = "volume_surprise"
path = "examples/volume_surprise.rs"

[[example]]
name = "full_pipeline"
path = "examples/full_pipeline.rs"
