[package]
name = "order_flow_imbalance_crypto"
version = "0.1.0"
edition = "2021"
description = "Order Flow Imbalance analysis for cryptocurrency trading using Bybit data"
authors = ["ML Trading Examples"]
license = "MIT"
keywords = ["trading", "crypto", "orderbook", "microstructure", "hft"]

[lib]
name = "order_flow_imbalance"
path = "src/lib.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# EXAMPLES
# ═══════════════════════════════════════════════════════════════════════════════

[[example]]
name = "fetch_orderbook"
path = "examples/fetch_orderbook.rs"

[[example]]
name = "fetch_trades"
path = "examples/fetch_trades.rs"

[[example]]
name = "calculate_ofi"
path = "examples/calculate_ofi.rs"

[[example]]
name = "calculate_vpin"
path = "examples/calculate_vpin.rs"

[[example]]
name = "feature_engineering"
path = "examples/feature_engineering.rs"

[[example]]
name = "train_model"
path = "examples/train_model.rs"

[[example]]
name = "trading_strategy"
path = "examples/trading_strategy.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[[example]]
name = "realtime_analysis"
path = "examples/realtime_analysis.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# DEPENDENCIES
# ═══════════════════════════════════════════════════════════════════════════════

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"

# Statistics
statrs = "0.16"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# CSV for data export/import
csv = "1.3"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# HMAC for API authentication (Bybit requires signature)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# WebSocket for real-time data
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Ordered float for comparisons
ordered-float = "4.2"

# UUID for order IDs
uuid = { version = "1.6", features = ["v4"] }

# Pretty printing
tabled = "0.15"
colored = "2.1"

# Progress bars
indicatif = "0.17"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "ofi_benchmark"
harness = false
